# os-project

./: .gitignore  AUTHORS.txt  CMakeLists.txt  Readme.md  main.c  makefile
core/: Scheduler.c  Scheduler.h  SchedulerNonPreemptive.c  SchedulerNonPreemptive.h
esercitazione/: main.c
examples/: threads.c
files/: 01_tasks.csv  simple.csv
libs/: csvparser.c  csvparser.h
structures/: Instruction.c  Instruction.h  InstructionList.c  InstructionsList.h  StateList.c  StateList.h  TaskControlBlock.c  TaskControlBlock.h  TaskList.c  TaskList.h
utilities/: utilities.c  utilities.h
